feat: adds contract tests (#2)