@@ -23,6 +23,7 @@
 		<spotless.version>2.42.0</spotless.version>
 		<springdoc-openapi.version>2.8.6</springdoc-openapi.version>
 		<springdoc-openapi-plugin.version>1.4</springdoc-openapi-plugin.version>
+		<spring-cloud-contract.version>4.2.1</spring-cloud-contract.version>
 	</properties>
 
 	<dependencies>
@@ -76,6 +77,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
+			<version>${spring-cloud-contract.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -101,7 +108,10 @@
 							<version>${lombok-mapstruct-binding.version}</version>
 						</path>
 					</annotationProcessorPaths>
-				</configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
@@ -168,6 +178,18 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
+				<version>${spring-cloud-contract.version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<packageWithBaseClasses>com.ulsub.order.controller</packageWithBaseClasses>
+					<testFramework>JUNIT5</testFramework>
+					<convertToYaml>true</convertToYaml>
+					<failOnNoContracts>false</failOnNoContracts>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
